api com docker a funfar
